# relay-tools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
.pybuild/cpython3_3.12_relay-tools/: relay_tools-0.1.0-py3-none-any.whl
.pybuild/cpython3_3.12_relay-tools/scripts/: relay  relay-client
debian/: changelog  control  copyright  debhelper-build-stamp  files  relay-tools.install  relay-tools.postinst.debhelper  relay-tools.postrm.debhelper  relay-tools.prerm.debhelper  relay-tools.relay-daemon.service  relay-tools.substvars  rules
debian/relay-tools/DEBIAN/: conffiles  control  md5sums  postinst  postrm  prerm
debian/relay-tools/etc/relay/: channels.yaml.example
debian/relay-tools/usr/share/doc/relay-tools/: copyright
docs/: board-yaml-format.md
relay_tools/: __init__.py  api.py  base.py  board.py  board_cli.py  board_config.py  cli.py  client.py  client_cli.py  config.py  waveshare.py
systemd/: channels.yaml  lab-board.yaml  relay-daemon.service  rom2820-board.yaml
tests/: test_api.py  test_base.py  test_board.py  test_board_cli.py  test_board_config.py  test_cli.py  test_client.py  test_client_cli.py  test_config.py  test_package_init.py  test_waveshare.py
