[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relay-tools"
version = "0.1.0"
description = "Tooling for Waveshare Raspberry Pi relay hats"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "fastapi>=0.110",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
gpio = [
    "gpiozero>=2.0",
    "lgpio>=0.2",
    "RPi.GPIO>=0.7.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
relay = "relay_tools.cli:cli"
relay-api = "relay_tools.cli:serve_api"
relay-client = "relay_tools.client_cli:client_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["relay_tools*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
